--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "~TODO~",
+  "name": "ipa-api-client",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -14,6 +14,8 @@
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
