--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@sveltejs/kit": "next",
+    "@types/cookie": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "dotenv": "^10.0.0",
@@ -26,5 +27,10 @@
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@lukeed/uuid": "^2.0.0",
+    "@supabase/supabase-js": "^1.18.1",
+    "cookie": "^0.4.1"
+  }
 }
